Orden en las variables

--- a/styles/scss/base/_variables.scss
+++ b/styles/scss/base/_variables.scss
@@ -1,8 +1,18 @@
-$font-title:'Cinzel Decorative', cursive;
+//Colores
+
+$azul-background: #171B1F;
 $azul-1: #0A0F29;
 $azul-2: #ffffff;
 $naranja-main: #ff6e40;
 $azul-main: #085BBA;
-$menu-font: 'Josefin Sans', sans-serif;
 $azul-oscuro: #0C1B33;
+
+
+//Fuentes
+
+$menu-font: 'Josefin Sans', sans-serif;
+$font-title:'Cinzel Decorative', cursive;
+
+
+//sombras y otras cosas
 $box-shadow: drop-shadow(-10px 10px 9px rgba(0, 0, 0, 0.75));
