--- a/styles/scss/base/_variables.scss
+++ b/styles/scss/base/_variables.scss
@@ -1,17 +1,15 @@
 //Colores
 
-$azul-background: #171B1F;
+$background-principal: #171B1F;  //azul de fondo para las paginas y tal vez botones
+$background-secundario: #fff6f0; //background blanco
+$button-principal: #ff6e40; //color principal de los botones
+$button-secundario: #ffffff; //color secundario de los botones
+$azul-main: #085BBA; //borde principal de los cuadros
+
 $azul-1: #0A0F29;
 $azul-2: #ffffff;
-$naranja-main: #ff6e40;
-$azul-main: #085BBA;
 $azul-oscuro: #0C1B33;
 
-
-//Fuentes
-
-$menu-font: 'Josefin Sans', sans-serif;
-$font-title:'Cinzel Decorative', cursive;
 
 
 //sombras y otras cosas
