--- a/styles/scss/layout/_nav.scss
+++ b/styles/scss/layout/_nav.scss
@@ -18,7 +18,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-    background-color: $naranja-main;
+    background-color: $button-principal;
     width: 130px;
     height: 37px;
     box-shadow: #085BBA;
