--- a/styles/scss/views/_index.scss
+++ b/styles/scss/views/_index.scss
@@ -1,5 +1,5 @@
 body.inicio{
-    background-image: url(../../../img/vinos/kym-ellis-aF1NPSnDQLw-unsplash.jpg);
+    background-image: url('../../../img/vinos/kym-ellis-aF1NPSnDQLw-unsplash.jpg');
     background-size: 100vw;
     background-repeat: no-repeat;
     background-color:#171B1F;
