--- a/styles/scss/base/_variables.scss
+++ b/styles/scss/base/_variables.scss
@@ -14,3 +14,9 @@ $azul-oscuro: #0C1B33;
 
 //sombras y otras cosas
 $box-shadow: drop-shadow(-10px 10px 9px rgba(0, 0, 0, 0.75));
+
+$text-shadow: #ffffff ;
+.printers {
+    color: #bc2e1e;
+    text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.4);
+}
