--- a/styles/scss/views/_quienes-somos.scss
+++ b/styles/scss/views/_quienes-somos.scss
@@ -1,3 +1,8 @@
+body#who {
+
+
+//Quienes somos
+
 main.who img{
     width: 100vw;
     object-fit: cover;
@@ -81,4 +86,7 @@ article.caja.caja--derecha{
 }
 
 @media only screen and (max-width: 600px){
+
+}
+
 }
