--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -28,8 +28,7 @@ div.titulo{
         height: 70px;
         &:hover path{
             stroke-width: 3;
-            stroke:rgb(6, 4, 34);
-        }
+            filter: brightness(150%);        }
 
         top: 0;
     }
