--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,3 +1,4 @@
+@import 'components/flickity.css';
 * {
   margin: 0;
   padding: 0;
@@ -290,6 +291,34 @@ body#inicio > div main .quote-three {
   grid-column-start: span 2;
 }
 
+/* external css: flickity.css */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+}
+
+.carousel {
+  background: #EEE;
+}
+
+.carousel-cell {
+  margin-right: 20px;
+  overflow: hidden;
+}
+
+.carousel-cell img {
+  display: block;
+  height: 200px;
+}
+
+@media screen and (min-width: 768px) {
+  .carousel-cell img {
+    height: 400px;
+  }
+}
 body#bodegas main {
   display: flex;
   justify-content: center;
