--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -9,6 +9,8 @@
 //Componentes
 @import 'components/buttons';
 @import 'components/masonry';
+@import 'components/carousel';
+@import 'components/flickity.css';
 
 //Partes del sitio
 
