--- a/styles/scss/views/_index.scss
+++ b/styles/scss/views/_index.scss
@@ -1,9 +1,10 @@
 body#inicio > div{
     z-index: 10;
-    background-image: url('../../../img/vinos/kym-ellis-aF1NPSnDQLw-unsplash.jpg');
+    background-image: url('../../img/vinos/kym-ellis-aF1NPSnDQLw-unsplash.jpg');
     background-size: 100vw;
     background-repeat: no-repeat;
     background-color:#171B1F;
+}
 
 
 main{
@@ -48,6 +49,7 @@ main{
         align-items: center;
         p{
             font-size: 2em;
+            
         }
 
     }
@@ -93,29 +95,7 @@ main{
     }
 
 }
-}//close body tag
-/* external css: flickity.css */
 
-* { box-sizing: border-box; }
-
-body { font-family: sans-serif; }
-
-.carousel {
-  background: #EEE;
-}
-
-.carousel-cell {
-  margin-right: 20px;
-  overflow: hidden;
-}
-
-.carousel-cell img {
-  display: block;
-  height: 200px;
-}
-
-@media screen and ( min-width: 768px ) {
-  .carousel-cell img {
-    height: 400px;
-  }
+.carousel-pruductos {
+    margin-top: 200vh;
 }
