--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -8,3 +8,18 @@
     text-decoration: none;
 }
 
+html {
+    font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
+}
+body {
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
