--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -8,7 +8,6 @@
 }
 
 html {
-  font-size: 62.5%;
   font-family: "Roboto", sans-serif;
 }
 
@@ -23,11 +22,6 @@ li {
 
 a {
   text-decoration: none;
-}
-
-.printers {
-  color: #bc2e1e;
-  text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.4);
 }
 
 /*Header*/
@@ -63,7 +57,17 @@ div.titulo svg {
 }
 div.titulo svg:hover path {
   stroke-width: 3;
+  transition: 0.8s ease;
   filter: brightness(150%);
+}
+
+.printers {
+  text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.315);
+}
+
+div.titulo:hover .printers {
+  transition: 0.8s ease;
+  text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.781);
 }
 
 header div.icon--responsive {
@@ -82,7 +86,7 @@ header div.icon--responsive svg {
     position: relative;
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   header {
     display: flex;
     flex-direction: row;
@@ -90,6 +94,9 @@ header div.icon--responsive svg {
     align-items: center;
   }
 
+  div.titulo {
+    margin-bottom: 20px;
+  }
   div.titulo h1 {
     top: 10px;
   }
@@ -116,20 +123,40 @@ header div.icon--responsive svg {
     width: 30px;
   }
 }
-/*Menu----cortar en 940*/
-.nav__menu {
+@media only screen and (max-width: 480px) {
+  div.titulo {
+    margin-bottom: 25px;
+  }
+  div.titulo svg {
+    width: 15em;
+    height: 3.7em;
+  }
+  div.titulo .printers {
+    font-size: 2em;
+  }
+}
+nav {
   position: fixed;
+  top: 10px;
+  width: fit-content;
+  padding: 7px 15px 15px 45px;
+  right: 0px;
+  border-radius: 3px;
+  background-color: #576c8334;
+  z-index: 100;
+}
+
+.nav__menu {
+  position: relative;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap-reverse;
   justify-content: flex-start;
   gap: 30px;
-  top: 30px;
   right: 20px;
   height: fit-content;
   width: fit-content;
   float: right;
-  z-index: 9;
 }
 
 .menu {
@@ -152,17 +179,22 @@ header div.icon--responsive svg {
 .menu .menu__text--small {
   font-size: 1.2em;
 }
-.menu .menu__text--meddium {
-  font-size: 1.5em;
+.menu .menu__text--medium {
+  font-size: 1.4em;
+}
+
+.menu--adaptive {
+  width: fit-content;
+  padding: 10px;
 }
 
 .menu::before {
   content: "";
   position: absolute;
-  right: 5px;
-  top: 3px;
-  width: 125px;
-  height: 32px;
+  right: 2px;
+  top: 2px;
+  width: 100%;
+  height: 100%;
   border: 3px solid #085BBA;
   z-index: -1;
 }
@@ -171,40 +203,46 @@ header div.icon--responsive svg {
   text-decoration-line: line-through;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1400px) {
+  nav {
+    position: relative;
+    background-color: transparent;
+    top: 0px;
+    float: right;
+  }
+}
+@media only screen and (max-width: 900px) {
   .nav__menu {
-    gap: 10px;
-    height: fit-content;
-    width: fit-content;
+    justify-content: center;
   }
 
   .menu {
-    width: 80px;
-    height: 30px;
+    width: 100px;
+    height: 32px;
     box-shadow: #085BBA;
   }
   .menu .menu__text {
-    justify-content: center;
-    align-self: center;
-    font-family: "Josefin Sans", sans-serif;
     font-size: 1.5em;
-    color: white;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.644);
   }
   .menu .menu__text--small {
     font-size: 0.7em;
   }
-  .menu .menu__text--meddium {
+  .menu .menu__text--medium {
     font-size: 1em;
   }
 
   .menu::before {
     content: "";
     position: absolute;
-    right: 5px;
-    top: 3px;
-    width: 75px;
-    height: 25px;
+    right: 1px;
+    top: 1px;
+    width: 100%;
+    height: 100%;
+  }
+}
+@media only screen and (max-width: 680px) {
+  .nav__menu {
+    gap: 20px;
   }
 }
 body {
