--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -20,18 +20,30 @@ div.titulo{
         stroke-width: 1;
         font-style: normal;
         font-weight: normal;
-        color: rgb(0, 0, 0);
+        color: rgb(0, 0, 0);        
     }
+
+
     svg{
         position: absolute;
         width: 22.5em;
         height: 70px;
         &:hover path{
             stroke-width: 3;
-            filter: brightness(150%);        }
+            transition: .8s ease;
+            filter: brightness(150%);        
+        }
 
         top: 0;
     }
+
+}
+.printers {
+    text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.315);
+}
+div.titulo:hover .printers {
+    transition: .8s ease;
+    text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.781);
 
 }
 header div.icon--responsive{
@@ -54,7 +66,7 @@ header div.icon--responsive svg{
 
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 768px){
     header{
         display: flex;
         flex-direction: row;
@@ -70,6 +82,7 @@ header div.icon--responsive svg{
             top: 5px;
             width: 22.5em;
         }
+        margin-bottom: 20px;
     }
     
     header div.icon--responsive{
@@ -89,4 +102,19 @@ header div.icon--responsive svg{
         width: 30px;
         
     }
+}
+
+
+@media only screen and (max-width: 480px){
+    div.titulo {
+        svg {
+            width: 15em;
+            height: 3.7em;
+        }
+        .printers{
+            font-size: 2em;
+        }
+    margin-bottom: 25px;
+    }
+
 }
