--- a/styles/scss/layout/_nav.scss
+++ b/styles/scss/layout/_nav.scss
@@ -1,18 +1,24 @@
-/*Menu----cortar en 940*/
-.nav__menu{
+nav {
     position: fixed;
+    top: 10px;
+    width: fit-content;
+    padding: 7px 15px 15px 45px;
+    right: 0px;
+    border-radius: 3px;
+    background-color: #576c8334;
+    z-index: 100;
+}
+.nav__menu{
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap-reverse;
     justify-content: flex-start;
     gap: 30px;
-    top: 30px;
     right: 20px;
     height: fit-content;
     width: fit-content;
     float: right;
-    z-index: 9;
-
 }
 .menu{
     position: relative;
@@ -37,17 +43,26 @@
     .menu__text--small{
         font-size: 1.2em;
     }
-    .menu__text--meddium{
-        font-size: 1.5em;
+    .menu__text--medium{
+        font-size: 1.4em;
     }
+
 }
+
+.menu--adaptive {
+    width: fit-content;
+    padding: 10px;
+}
+
+
+
 .menu::before{
     content: "";
     position: absolute;
-    right: 5px;
-    top: 3px;
-    width: 125px;
-    height: 32px;
+    right: 2px;
+    top: 2px;
+    width: 100%;
+    height: 100%;
     border: 3px solid $azul-main;
     z-index: -1;  //decidir por sombras
 }
@@ -61,41 +76,47 @@
 
 //Responsive-- media query
 
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1400px){
+    nav {
+        position:relative ;
+        background-color: transparent ;
+        top: 0px;
+        float: right;
+    }
+}
+@media only screen and (max-width: 900px){
     .nav__menu{
-        gap: 10px;
-        height: fit-content;
-        width: fit-content;
+        justify-content: center;
     }
     .menu{
-        width: 80px;
-        height: 30px;
+        width: 100px;
+        height: 32px;
         box-shadow: #085BBA;
     
         .menu__text{
-            justify-content: center;
-            align-self: center;
-            font-family: $menu-font;
             font-size: 1.5em;
-            color: white;
-            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.644);
-            
-    
         }
     
         .menu__text--small{
             font-size: 0.7em;
         }
-        .menu__text--meddium{
+        .menu__text--medium{
             font-size: 1em;
         }
     }
     .menu::before{
         content: "";
         position: absolute;
-        right: 5px;
-        top: 3px;
-        width: 75px;
-        height: 25px;
+        right: 1px;
+        top: 1px;
+        width: 100%;
+        height: 100%;
+    }
+
+}
+@media only screen and(max-width: 680px){
+
+    .nav__menu{
+    gap: 20px;
     }
 }
