--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -20,7 +20,9 @@ div.titulo{
         stroke-width: 1;
         font-style: normal;
         font-weight: normal;
-        color: rgb(0, 0, 0);        
+        color: rgb(0, 0, 0);     
+        
+
     }
 
 
@@ -39,7 +41,10 @@ div.titulo{
 
 }
 .printers {
+    transition: .8s;
     text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.315);
+
+
 }
 div.titulo:hover .printers {
     transition: .8s ease;
