--- a/styles/scss/layout/_main.scss
+++ b/styles/scss/layout/_main.scss
@@ -1,3 +1,21 @@
 body{
     background-color: $background-principal ;
 }
+html {
+    --scrollbarBG: #00000028;
+    --thumbBG: #90a4ae;
+}
+body::-webkit-scrollbar {
+    width: 9px;
+}
+body {
+    scrollbar-width: auto;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+body::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+}
+body::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG);
+    border-radius: 6px;
+}
