--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -440,6 +440,17 @@ body#bodegas main article img {
   object-fit: cover;
 }
 
+body#who main {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin: 85px auto;
+  width: 85vw;
+  background-color: white;
+  justify-content: center;
+}
 body#who main img {
   width: 100vw;
   object-fit: cover;
@@ -449,16 +460,8 @@ body#who main p {
   font-family: "Josefin Sans", sans-serif;
   font-size: 2em;
   letter-spacing: 0.08rem;
-}
-body#who main {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 30px;
-  margin-top: 85px;
-  justify-content: center;
-  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 2px solid black;
 }
 body#who article.caja {
   display: flex;
