--- a/styles/scss/base/_variables.scss
+++ b/styles/scss/base/_variables.scss
@@ -6,6 +6,13 @@ $button-principal: #ff6e40; //color principal de los botones
 $button-secundario: #ffffff; //color secundario de los botones
 $azul-main: #085BBA; //borde principal de los cuadros
 
+
+$tarjeta-tienda: #d0d0d1 ;
+$tarjeta-fondo: #000;
+
+
+
+
 $azul-1: #0A0F29;
 $azul-2: #ffffff;
 $azul-oscuro: #0C1B33;
