--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -547,6 +547,7 @@ body#who article.caja.caja--derecha .texto {
 
 .description p {
   font-size: 0.5em;
+  color: black;
 }
 
 img {
@@ -555,6 +556,7 @@ img {
 }
 
 .container > article:hover {
+  transition: 0.4s;
   transform: scale(1.1);
 }
 
@@ -566,7 +568,9 @@ img {
 }
 
 .container > article:hover img {
-  opacity: 0.6;
+  background-color: white;
+  filter: brightness(0) invert(1);
+  transition: 0.8s ease-out;
 }
 
 .container > article {
