--- a/styles/scss/views/_tienda.scss
+++ b/styles/scss/views/_tienda.scss
@@ -33,6 +33,7 @@
 }
 .description p {
     font-size: .5em;
+    color:rgb(0, 0, 0);
 }
 
 img {
@@ -40,7 +41,9 @@ img {
     padding: 5px;
 }
 
+
 .container > article:hover {
+    transition: .4s;
     transform: scale(1.1);
 }
 .container > article:hover .description {
@@ -51,8 +54,12 @@ img {
 }
 
 .container > article:hover img {
-    opacity: 0.6;
+    background-color: white;
+    filter: brightness(0) invert(1);
+
+    transition: .8s ease-out;
 }
+
 .container > article {
     display: flex;
     justify-content: center;
