--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -581,4 +581,29 @@ img {
   color: #040716;
 }
 
+.botonCarrito {
+  position: fixed;
+  position: fixed;
+  right: 40px;
+  bottom: 30px;
+  display: flex;
+  float: right;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  margin-right: 50px;
+  border: 1px solid black;
+  width: 130px;
+  height: 40px;
+  border-radius: 51px;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  filter: drop-shadow(-10px 10px 9px rgba(0, 0, 0, 0.75));
+}
+.botonCarrito a {
+  font-family: "Josefin Sans", sans-serif;
+  color: black;
+  font-size: 1.5em;
+}
+
 /*# sourceMappingURL=main.css.map */
