fixed menu, tienda, contacto, y textos

--- a/styles/scss/base/_variables.scss
+++ b/styles/scss/base/_variables.scss
@@ -1,10 +1,18 @@
-//Colores
+:root{
+    font-family: 'Josefin Sans', sans-serif;
+}
 
+
+//Colores
 $background-principal: #171B1F;  //azul de fondo para las paginas y tal vez botones
 $background-secundario: #fff6f0; //background blanco
 $button-principal: #ff6e40; //color principal de los botones
 $button-secundario: #ffffff; //color secundario de los botones
 $azul-main: #085BBA; //borde principal de los cuadros
+$naranja--botones: #ff9800; //para el footer
+$azul--menu: #00121b;
+$menu--transparente: #171b1fe7;//menu
+
 
 
 $tarjeta-tienda: #d0d0d1 ;
