--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -24,6 +24,10 @@ a {
   text-decoration: none;
 }
 
+:root {
+  font-family: "Josefin Sans", sans-serif;
+}
+
 /*Header*/
 header {
   position: relative;
@@ -143,7 +147,8 @@ nav {
   padding: 7px 15px 15px 45px;
   right: 0px;
   border-radius: 3px;
-  background-color: #576c8334;
+  background-color: #171b1fe7;
+  backdrop-filter: blur(4px);
   z-index: 100;
 }
 
@@ -273,23 +278,197 @@ body::-webkit-scrollbar-thumb {
   border-radius: 6px;
 }
 
-footer.fixed-footer {
-  position: sticky;
-  bottom: 0;
-  z-index: -5;
+footer {
   width: 100%;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  background: #262626;
-  color: #666666;
-  font-size: 1.7em;
-}
-footer.fixed-footer img {
-  height: 50px;
+  background: #00121b;
+  display: block;
 }
 
+.inner-footer {
+  width: 95%;
+  margin: auto;
+  padding: 30px 10px;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  justify-content: center;
+}
+
+.footer-items {
+  width: 25%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  color: #fff;
+}
+
+.footer-items p {
+  font-size: 16px;
+  text-align: justify;
+  line-height: 25px;
+  color: #fff;
+}
+
+.footer-items h1 {
+  color: #fff;
+}
+
+.border1 {
+  height: 3px;
+  width: 40px;
+  background: #ff9800;
+  color: #ff9800;
+  background-color: #ff9800;
+  border: 0px;
+}
+
+ul {
+  list-style: none;
+  color: #fff;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+}
+
+ul a {
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  transition: 0.3s;
+}
+
+ul a:hover {
+  color: #ff9800;
+}
+
+ul li {
+  margin: 10px 0;
+  height: 25px;
+}
+
+.social-media {
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+}
+
+.social-media a {
+  text-decoration: none;
+}
+
+.social-media i {
+  height: 25px;
+  width: 25px;
+  margin: 20px 10px;
+  padding: 4px;
+  color: #fff;
+  transition: 0.5s;
+}
+
+.social-media i:hover {
+  transform: scale(1.5);
+}
+
+.footer-bottom {
+  padding: 10px;
+  background: #00121b;
+  color: #fff;
+  font-size: 12px;
+  text-align: center;
+}
+.footer-bottom a {
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  transition: 0.3s;
+}
+.footer-bottom a:hover {
+  color: #ff9800;
+}
+
+@media screen and (max-width: 1275px) {
+  .footer-items {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 660px) {
+  .footer-items {
+    width: 100%;
+  }
+}
+body#contacto main {
+  margin-top: 4em;
+}
+body#contacto main .tarjeta--mapa {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0px 10px 3em 10px;
+}
+body#contacto main .tarjeta--mapa h2 {
+  position: relative;
+  margin-bottom: 5px;
+  font-size: 2.5em;
+  color: #fff6f0;
+  width: fit-content;
+}
+body#contacto main .tarjeta--mapa h2::before {
+  content: " ";
+  position: absolute;
+  background-color: rgba(2, 27, 109, 0.445);
+  top: -0.5em;
+  left: -2em;
+  padding: 10px 10px 10px 10px;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+}
+body#contacto main .descripcion--contacto {
+  width: 30%;
+  height: 288px;
+  margin-top: calc(2.5em + 5px);
+  margin-left: 50px;
+  border: 2px solid #fff6f0;
+  text-align: right;
+  padding-right: 20px;
+  position: relative;
+}
+body#contacto main .descripcion--contacto p {
+  color: #fff6f0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.2vw;
+  line-height: 200%;
+}
+body#contacto main .descripcion--contacto::before {
+  content: " ";
+  position: absolute;
+  background-color: rgba(2, 27, 109, 0.445);
+  top: -0.5em;
+  right: -2em;
+  padding: 10px 10px 10px 10px;
+  width: 90%;
+  height: 70%;
+  z-index: -1000;
+}
+body#contacto iframe {
+  height: clamp(70vh, 500px, 50vw);
+  width: 50vw;
+}
+
+@media only screen and (max-width: 1200px) {
+  body#contacto main .tarjeta--mapa {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+  }
+  body#contacto iframe {
+    width: min(90vw, 700px);
+    height: min(80vh, 50vw);
+  }
+}
 body#inicio {
   z-index: 10;
   background-image: url("../../img/vinos/kym-ellis-aF1NPSnDQLw-unsplash.jpg");
@@ -397,8 +576,6 @@ body#inicio .carousel-pruductos {
   }
 }
 body#bodegas main {
-  display: flex;
-  justify-content: center;
   position: relative;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -406,9 +583,10 @@ body#bodegas main {
   flex-direction: column;
 }
 body#bodegas main article {
+  margin: 0 auto;
   display: flex;
   position: relative;
-  max-width: 90%;
+  width: min(85vw, 1400px);
   margin-top: 100px;
   flex-direction: column;
   align-self: center;
@@ -427,15 +605,16 @@ body#bodegas main article .texto {
   flex-direction: column;
 }
 body#bodegas main article h2 {
-  font-size: 3em;
+  font-size: 4vw;
   margin-bottom: 10px;
 }
 body#bodegas main article p {
-  font-size: 1.7em;
+  font-size: 2vw;
 }
 body#bodegas main article img {
   position: relative;
   width: 60vw;
+  height: 300px;
   align-self: center;
   object-fit: cover;
 }
@@ -582,12 +761,11 @@ img {
 }
 
 .botonCarrito {
-  position: fixed;
-  position: fixed;
+  position: sticky;
   right: 40px;
   bottom: 30px;
-  display: flex;
   float: right;
+  display: flex;
   margin-top: 20px;
   margin-bottom: 50px;
   margin-right: 50px;
@@ -604,6 +782,9 @@ img {
   font-family: "Josefin Sans", sans-serif;
   color: black;
   font-size: 1.5em;
+}
+.botonCarrito :active {
+  transform: scale(1.1);
 }
 
 /*# sourceMappingURL=main.css.map */
