--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -1,17 +1,123 @@
-footer.fixed-footer {
-    position: sticky;
-    bottom: 0;
-    z-index: -5;
+footer {
     width: 100%;
-    height: 200px;
+    background: $azul--menu;
+    
+    display: block;
+}
+
+.inner-footer {
+    width: 95%;
+    margin: auto;
+    padding: 30px 10px;
     display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
     justify-content: center;
-    align-self: center;
-    background: #262626;
-    color: #666666;
-    font-size: 1.7em;
-    img {
-        height: 50px;
+}
+
+.footer-items {
+    width: 25%;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    color: #fff;
+}
+
+.footer-items p {
+    font-size: 16px;
+    text-align: justify;
+    line-height: 25px;
+    color: #fff;
+}
+
+.footer-items h1 {
+    color: #fff;
+}
+
+.border1 {
+    height: 3px;
+    width: 40px;
+    background: $naranja--botones;
+    color: $naranja--botones;
+    background-color: $naranja--botones;
+    border: 0px;
+}
+
+ul {
+    list-style: none;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 0.5px;	
+}
+
+ul a {
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    transition: 0.3s;
+}
+
+ul a:hover {
+    color: $naranja--botones;
+}
+
+ul li {
+    margin: 10px 0;
+    height: 25px;
+}
+
+
+.social-media {
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+}
+
+.social-media a {
+    text-decoration: none;
+}
+
+.social-media i {
+    height: 25px;
+    width: 25px;
+    margin: 20px 10px;
+    padding: 4px;
+    color: #fff;
+    transition: 0.5s;
+}
+
+.social-media i:hover {
+    transform: scale(1.5);
+}
+
+.footer-bottom {
+    padding: 10px;
+    background: #00121b;
+    color: #fff;
+    font-size: 12px;
+    text-align: center;
+    a {
+        text-decoration: none;
+        outline: none;
+        color: #fff;
+        transition: 0.3s;
+    &:hover {
+        color: $naranja--botones;
+    }
     }
 
+}
+
+
+@media screen and (max-width: 1275px) {
+    .footer-items {
+        width: 50%;
+    }
+}
+
+
+@media screen and (max-width: 660px) {
+    .footer-items {
+        width: 100%;
+    }
 }
