--- a/styles/scss/views/_nuestras-bodegas.scss
+++ b/styles/scss/views/_nuestras-bodegas.scss
@@ -2,18 +2,19 @@
 body#bodegas{
 
 main{
-    display: flex;
-    justify-content:center;
     position: relative;
     margin-top: 50px;
     margin-bottom: 50px;
     gap: 50px;
+    
     flex-direction: column;
 
     article{
+        margin: 0 auto;
+
         display: flex;
         position: relative;
-        max-width: 90%;
+        width: min(85vw, 1400px);
         margin-top: 100px;
         flex-direction: column;
         align-self: center;
@@ -32,16 +33,17 @@ main{
 
         }
         h2{
-            font-size: 3em;
+            font-size: 4vw;
         margin-bottom: 10px;
     
         }
         p{
-            font-size: 1.7em;
+            font-size: 2vw;
         }
         img{
             position: relative;
             width: 60vw;
+            height: 300px;
             align-self: center;
             object-fit: cover;
 
